<?xml version="1.0" encoding="utf-8"?>
<!--TODO: Deletar quando fizer novo dialog para fundos-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/backgroundTop"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/withdrawalDetailsTitle"
        style="@style/tituloDialog"
        android:layout_marginTop="@dimen/cardviewMargin"
        android:layout_marginLeft="@dimen/dialogMargin"
        android:layout_marginBottom="@dimen/dialogDistance"/>

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_below="@id/tvTitulo"
        android:background="@color/backgroundTop">

        <RelativeLayout
            android:id="@+id/rl1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">
            <TextView
                android:id="@+id/tvLabel1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bankLabel"
                style="@style/labelDialog"
                android:layout_marginLeft="@dimen/dialogMargin"
                android:layout_marginBottom="@dimen/dialogContentDistance"/>

            <TextView
                android:id="@+id/tvContent1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                style="@style/conteudoDialog"
                android:layout_marginBottom="@dimen/dialogContentDistance"
                android:layout_marginRight="@dimen/dialogMargin"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_below="@id/ll1"
        android:background="@color/backgroundTop">

        <RelativeLayout
            android:id="@+id/rl2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">
            <TextView
                android:id="@+id/tvLabel2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/branchLabel"
                style="@style/labelDialog"
                android:layout_marginLeft="@dimen/dialogMargin"
                android:layout_marginBottom="@dimen/dialogContentDistance"/>

            <TextView
                android:id="@+id/tvContent2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                style="@style/conteudoDialog"
                android:layout_marginBottom="@dimen/dialogContentDistance"
                android:layout_marginRight="@dimen/dialogMargin"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_below="@id/ll2"
        android:background="@color/backgroundTop">

        <RelativeLayout
            android:id="@+id/rl3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">
            <TextView
                android:id="@+id/tvLabel3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accountLabel"
                style="@style/labelDialog"
                android:layout_marginLeft="@dimen/dialogMargin"
                android:layout_marginBottom="@dimen/dialogContentDistance"/>

            <TextView
                android:id="@+id/tvContent3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                style="@style/conteudoDialog"
                android:layout_marginBottom="@dimen/dialogContentDistance"
                android:layout_marginRight="@dimen/dialogMargin"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_below="@id/ll3"
        android:background="@color/backgroundTop">

        <RelativeLayout
            android:id="@+id/rl4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">
            <TextView
                android:id="@+id/tvLabel4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/typeLabel"
                style="@style/labelDialog"
                android:layout_marginLeft="@dimen/dialogMargin"
                android:layout_marginBottom="@dimen/dialogContentDistance"/>

            <TextView
                android:id="@+id/tvContent4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                style="@style/conteudoDialog"
                android:layout_marginBottom="@dimen/dialogContentDistance"
                android:layout_marginRight="@dimen/dialogMargin"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_below="@id/ll4"
        android:background="@color/backgroundTop">

        <RelativeLayout
            android:id="@+id/rl5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">
            <TextView
                android:id="@+id/tvLabel5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jointAccountLabel"
                style="@style/labelDialog"
                android:layout_marginLeft="@dimen/dialogMargin"
                android:layout_marginBottom="@dimen/dialogContentDistance"/>

            <TextView
                android:id="@+id/tvContent5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                style="@style/conteudoDialog"
                android:layout_marginBottom="@dimen/dialogContentDistance"
                android:layout_marginRight="@dimen/dialogMargin"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_below="@id/ll5"
        android:background="@color/backgroundTop">

        <RelativeLayout
            android:id="@+id/rl6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">
            <TextView
                android:id="@+id/tvLabel6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/solicitationDateLabel"
                style="@style/labelDialog"
                android:layout_marginLeft="@dimen/dialogMargin"
                android:layout_marginBottom="@dimen/dialogContentDistance"/>

            <TextView
                android:id="@+id/tvContent6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                style="@style/conteudoDialog"
                android:layout_marginBottom="@dimen/dialogContentDistance"
                android:layout_marginRight="@dimen/dialogMargin"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_below="@id/ll5"
        android:background="@color/backgroundTop">

        <RelativeLayout
            android:id="@+id/rlButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">

            <Button
                android:id="@+id/buttonDialog"
                android:minWidth="@dimen/zero"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dialogButtonHeight"
                android:text="@string/okButtonLabel"
                style="@style/buttonDialog"
                android:gravity="center"
                android:layout_marginRight="@dimen/dialogMargin"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:background="@android:color/transparent"/>
        </RelativeLayout>
    </LinearLayout>



</RelativeLayout>
